--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -50,5 +50,13 @@ jobs:
         DROPBOX_TOKEN: ${{ secrets.DROPBOX_TOKEN }}
         DROPBOX_APP_KEY: ${{ secrets.DROPBOX_APP_KEY }}
         DROPBOX_APP_SECRET: ${{ secrets.DROPBOX_APP_SECRET }}
+
+        SFTP_HOST: ${{ secrets.SFTP_HOST }}
+        SFTP_PORT: ${{ secrets.SFTP_PORT }}
+        SFTP_USERNAME: ${{ secrets.SFTP_USERNAME }}
+        SFTP_PRIVATE_KEY_BASE64: ${{ secrets.SFTP_PRIVATE_KEY_BASE64 }}
+        SFTP_KEY_PATH: test.key
       run: |
-        pytest -m 'not sftp and not slow'
+        echo ${SFTP_PRIVATE_KEY_BASE64} | base64 -d > ${SFTP_KEY_PATH}
+        chmod 600 ${SFTP_KEY_PATH}
+        pytest -m 'not slow'
