--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@
 #
 bcrypt==4.1.3
     # via paramiko
-certifi==2024.6.2
+certifi==2024.7.4
     # via requests
 cffi==1.16.0
     # via
@@ -32,6 +32,8 @@ pycparser==2.22
     # via cffi
 pynacl==1.5.0
     # via paramiko
+pyreadline3==3.4.1
+    # via humanfriendly
 requests==2.32.3
     # via dropbox
 six==1.16.0
