--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -31,10 +31,9 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install --upgrade setuptools
-        pip install flake8 pytest pytest-xdist build
         # install package in editable mode and use current lock file 
         # for build reproducibility
-        pip install -e . -c requirements.txt
+        pip install -e . -c requirements.txt -r dev-requirements.txt
     - name: Lint the code
       run: |
         black --check .
