--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -60,5 +60,7 @@ jobs:
       run: |
         echo ${SFTP_PRIVATE_KEY_BASE64} | base64 -d > ${SFTP_KEY_PATH}
         chmod 600 ${SFTP_KEY_PATH}
-        pytest -n auto -m 'not slow and not dropbox' --log-cli-level DEBUG
-        pytest -m 'not slow and dropbox' --log-cli-level DEBUG
+        # start with non dropbox tests
+        pytest -n auto -m 'not slow and not dropbox' --reruns 3 --reruns-delay 5 --log-cli-level DEBUG
+        # dropbox tests
+        pytest -m 'not slow and dropbox' --reruns 3 --reruns-delay 5 --log-cli-level DEBUG
