--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -63,7 +63,9 @@ jobs:
       run: |
         echo ${SFTP_PRIVATE_KEY_BASE64} | base64 -d > ${SFTP_KEY_PATH}
         chmod 600 ${SFTP_KEY_PATH}
-        # start with non dropbox tests
-        pytest -n auto -m 'not slow and not dropbox' --reruns $RERUN_COUNT --reruns-delay $RERUN_DELAY --log-cli-level DEBUG
+        # run fs tests
+        pytest -n auto -m 'not slow and not sftp and not dropbox' --reruns $RERUN_COUNT --reruns-delay $RERUN_DELAY --log-cli-level DEBUG
+        # sftp tests, limit concurrency so that server is okay
+        pytest -n 4 -m 'not slow and sftp' --reruns $RERUN_COUNT --reruns-delay $RERUN_DELAY --log-cli-level DEBUG
         # dropbox tests (no concurrency, so that API rate limits are not hit)
         pytest -m 'not slow and dropbox' --reruns $RERUN_COUNT --reruns-delay $RERUN_DELAY --log-cli-level DEBUG
